[tool.poetry]
name = "astraea-bot"
version = "0.1.0"
description = ""
authors = ["torin"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
ptpython = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
